=== Deluge 1.2.0_rc2 (In Development) ===
==== GtkUI ====
	* Fix path errors when adding torrents externally in Windows
	* Fix localclient authentication by stripping the lines read from the auth file
	* Do not try to call doIteration() on the reactor if it has already stopped
	* Fix 'autostart localhost if needed' option
	* Fix starting plugins when the pluginmanager is started

==== Core ====
	* Fix saving torrent state on fresh configs

==== Web ====
	* Fix changing of the allocation in the preferences.
	* Fix updating the Connection Manager when a host is added.
	* Add a `--fork` option to allow forking the webui to the background
	* Fix the statusbar menu limits
	* Fix setting the torrent options via the options tab
	* Fix the private flag in the options tab

==== Misc ====
	* Add man pages for deluge-console, deluge-gtk and deluge-web

==== Extractor ====
	* Fix issue where the plugin would not stop extracting files after being disabled
	* Add option to create torrent name sub-folders in extract folder
  
=== Deluge 1.2.0_rc1 (07 October 2009) ===
==== Core ====
	* Implement new RPC protocol DelugeRPC replacing XMLRPC
	* Move to a twisted framework
	* Add an 'Error' filter for Trackers to show trackers that currently have a tracker error
	* Use system GeoIP database if available, this is now an optional dependency

==== GtkUI ====
	* Remove SignalReceiver
	* Implemented a cross-platform IPC method thus removing the DBUS dependency
	* Implement a "True" Classic Mode where there is no longer a separate daemon process
	* Add preferences option "Add torrent in paused state"
	* Add tracker icons to the Tracker column
	* Implement #259 show tooltip with country name in the peers tab
	* Add an error category to the tracker sidebar list
	* Add Find More Plugins button to Plugins preference page
	* Fix #518 remove header in add torrent dialog to save vertical space
	* Add a Cache preferences page to adjust cache settings and examine cache status